@@ -10,6 +10,8 @@ Post-v2.13.0
      * Deprecated DPDK pdump packet capture support removed.
      * Deprecated DPDK ring ports (dpdkr) are no longer supported.
      * Add hardware offload support for matching IPv6 protocol.
+     * Add hardware offload support for set of IPv6 TCP/UDP ports
+       actions (experimental).
    - Linux datapath:
      * Support for kernel versions up to 5.5.x.
    - AF_XDP:
